navigation on logo and user avatar working properly

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,6 +4,7 @@
   color: black;
   padding-left: 10px;
   margin: 0;
+  margin-right: 230px;
 }
 
 
@@ -14,7 +15,8 @@
 .avatar {
   width: 30px;
   height: 30px;
-  margin-right: 10px;
+  /* margin-right: 10px; */
+  margin: 0;
   }
 
   .navlink {
