changed edit and delete to ptag for styles

--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -78,3 +78,9 @@
     margin-right: 2.5rem;
     margin-left: 6rem;
   }
+
+  .delete-hovered {
+    color: red;
+    text-decoration: underline red;
+    cursor: pointer;
+  }
