--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -53,7 +53,7 @@
     font-size: 26px;
     font-weight: bold;
     margin-top: -20px;
-    font-family: Georgia, serif;
+    font-family: Helvetica;
   }
   
 
