--- a/src/components/DetailsRecipePage/DetailsRecipePage.css
+++ b/src/components/DetailsRecipePage/DetailsRecipePage.css
@@ -1,4 +1,4 @@
-.details-container {
+.child-details-container {
 
     border: 1px solid #E0E0E0;
     width: 800px;
@@ -7,7 +7,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+
+
   }
 
-   /* background-color: #F5F5F5; */
+
+
+.parent-details-container {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+}
