--- a/src/components/DetailsRecipePage/DetailsRecipePage.css
+++ b/src/components/DetailsRecipePage/DetailsRecipePage.css
@@ -1,5 +1,4 @@
-.child-details-container {
-
+/* .child-details-container {
     border: 1px solid #E0E0E0;
     width: 800px;
     padding: 10px;
@@ -7,14 +6,62 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-
   }
-
-
 
 .parent-details-container {
     display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
+
+
+.parent-details-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .child-details-container {
+    width: 800px;
+    margin-top: 40px;
+    border: 1px solid #E0E0E0;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .recipe-details {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .recipe-image {
+    width: 220px;
+    height: 220px;
+    margin-right: 10px;
+  }
+  
+  .recipe-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .recipe-info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .recipe-info h1 {
+    margin-top: 0;
+  }
+  
+  .recipe-ingredients, .recipe-directions {
+    padding: 10px;
+  }
+  
+  .recipe-ingredients li, .recipe-directions li {
+    margin-bottom: 10px;
+  }
+  
