added div comment container around from and added margin to h2 and comment container

--- a/src/components/DetailsRecipePage/DetailsRecipePage.css
+++ b/src/components/DetailsRecipePage/DetailsRecipePage.css
@@ -56,3 +56,10 @@
     margin-bottom: 10px;
   }
   
+  .comment-container {
+    margin-top: 80px;
+  }
+
+  .comment-container h2 {
+    margin-top: 70px;
+  }
