--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -61,10 +61,10 @@
   }
   
   .rounded-rectangle-text p {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
     margin-top: -50px;
-    text-align: left;
+    text-align: center;
     font-family: 'Bebas Neue', cursive;
   }
   
