--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Rubik:wght@500&display=swap');@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap');@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap');
 
 .navtitle {
-  font-size: 24px;
-  font-family: 'Rubik', sans-serif;
+  font-size: 30px;
+  font-family: 'Bebas Neue', cursive;
   font-weight: 700;
   color: black;
   padding-left: 10px;
