--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -4,15 +4,15 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
   }
   
   .hero-search-title h1 {
     font-size: 16px;
     font-weight: bold;
-    padding: 20px;
+    /* padding: 20px; */
   }
   
   .search-box-search-input {
@@ -22,7 +22,8 @@
     padding: 12px;
     font-size: 18px;
     margin-right: 12px;
-    margin-left: 20px;
+    margin-left: 100px;
+    /* margin-left: 20px */
   }
   
   button[type="submit"] {
