--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -45,7 +45,7 @@
   .createdViewBtn, .savedViewBtn, .addRecipeBtn, .deleteBtn, .editBtn, .postCommentBtn {
     border-radius: 25px !important;
   }
-  
+/*   
   .modal-container {
     display: flex;
     align-items: center;
@@ -77,7 +77,7 @@
     justify-content: flex-end;
     margin-right: 2.5rem;
     margin-left: 6rem;
-  }
+  } */
 
   .delete-hovered {
     color: red;
