added logics and css style for created and saved btns toggles in userpage

--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -90,3 +90,10 @@
     text-decoration: underline #1875D1;
     cursor: pointer;
   }
+
+  .active {
+    font-weight: bold !important;
+    text-decoration: underline !important;
+    text-underline-position: under !important;
+    text-decoration-thickness: 3px !important;
+  }
