added cust btn for save and saved btn for recipe saving toggle

--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -42,7 +42,7 @@
     }
   }
 
-  .createdViewBtn, .savedViewBtn, .addRecipeBtn, .deleteBtn, .editBtn, .postCommentBtn {
+  .createdViewBtn, .savedViewBtn, .addRecipeBtn, .deleteBtn, .editBtn, .postCommentBtn, .saveBtn, .saveEdBtn {
     border-radius: 25px !important;
   }
 /*   
