--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -45,13 +45,13 @@
   .createdViewBtn, .savedViewBtn, .addRecipeBtn, .deleteBtn, .editBtn, .postCommentBtn, .saveBtn, .saveEdBtn {
     border-radius: 25px !important;
   }
-/*   
-  .modal-container {
+  
+  .form-container {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #fff;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     outline: none;
     border: none;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
@@ -77,7 +77,7 @@
     justify-content: flex-end;
     margin-right: 2.5rem;
     margin-left: 6rem;
-  } */
+  }
 
   .delete-hovered {
     color: red;
