--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -25,7 +25,7 @@
   
   .addRecipeBtn {
     margin-top: 2rem !important;
-    margin-left: 2.25rem !important;
+    margin-left: .3rem !important;
     margin-bottom: 2rem !important;
   }
   
@@ -46,6 +46,10 @@
     border-radius: 25px !important;
   }
   
+  .createdViewBtn {
+    margin-right: 45px !important; 
+  }
+
   .form-container {
     display: flex;
     align-items: center;
