--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -43,3 +43,16 @@
   .container-search-results {
 padding: 20px; 
   }
+
+
+  .no-results-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px; /* adjust the height as needed */
+  }
+  
+  .no-results-message {
+    text-align: center;
+    font-size: 1.5rem;
+  }
