--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -171,4 +171,13 @@ p {
   cursor: pointer;
 }
 
-
+.image-modal {
+  background-color: white;
+  width: 400px;
+  max-width: 80%;
+  margin: auto;
+  margin-top: 10%;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+}
