--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -57,24 +57,14 @@
 }
 
 .form-container {
+  width: 60%;
+  margin-top: 40px;
+  border: 1px solid #E0E0E0;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  padding: 27px;
   justify-content: center;
-  background-color: #fff;
-  /* border-radius: 10px; */
-  outline: none;
-  border: none;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
-  width: 100%;
-  max-width: 650px;
-  height: 100%;
-  max-height: 700px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  align-items: center;
 }
 
 .modal-textfield {
