--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -58,7 +58,7 @@
 
 .form-container {
   width: 60%;
-  margin-top: 40px;
+  margin: 60px auto;
   border: 1px solid #E0E0E0;
   display: flex;
   flex-direction: column;
@@ -67,12 +67,12 @@
   align-items: center;
 }
 
-.modal-textfield {
+.form-textfield {
   margin-right: 1rem;
-  margin-left: 4rem;
+  margin-left: 6rem;
 }
 
-.modal-buttons {
+.form-buttons {
   display: flex;
   justify-content: flex-end;
   margin-right: 2.5rem;
