--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Rubik:wght@500&display=swap');@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap');@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&display=swap');
+
+
 html,
 body,
 #react-root {
@@ -132,6 +135,7 @@ input {
   font-size: 36px;
   margin-bottom: 20px;
   color: #222222;
+  font-family: 'Lobster', cursive;
 }
 
 .formPanel label {
