--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -167,3 +167,9 @@
   border-radius: 10px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
 }
+
+.delete-container, .edit-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
